# nillion-movement-poc

./: .gitignore  README.md  pyproject.toml
nillion_movement_poc/agent_modules/: pyproject.toml
nillion_movement_poc/agent_modules/agent_modules/agent/: agent_builder.py  steps.py  tools.py  workflow.py
nillion_movement_poc/agent_modules/agent_modules/agent/nodes/: base.py  classifier_node.py  executor_node.py  formatter_node.py  function_node.py  llm_node.py  user_data_retriever_node.py  web3_retriever_node.py
nillion_movement_poc/agent_modules/agent_modules/agent/resources/: agent_config.py
nillion_movement_poc/agent_modules/agent_modules/agent/strategies/: format_strategies.py
nillion_movement_poc/agent_modules/agent_modules/blockchain/: aptos_service.py  blockchain_base.py  web3_service.py
nillion_movement_poc/agent_modules/agent_modules/chat/: chat_application.py  data_service.py  executor_response_formatter.py  message_handler.py
nillion_movement_poc/agent_modules/agent_modules/classifier/: README.md  action_classifier.py  classifier.py  dataset.jsonl  eval_unified_tests.py  ft_action_classifier.py  ft_action_classifier_v2.py  prompts.py  requirements.txt  run_unified_tests.py  run_unified_tests_v3.py  train_v6_top_domains_sections.py
nillion_movement_poc/agent_modules/agent_modules/classifier/blockchain_action/: blockchain_action_dataset.jsonl  blockchain_action_subcat_test.py  finetune_blockchain_actions.py  ft_blockchain_actions_classifier.py  usage_test_blockchain_subcategories.py
nillion_movement_poc/agent_modules/agent_modules/database/const/: chain_config.py  (+9 more)
nillion_movement_poc/agent_modules/agent_modules/embedding/: embedding_service.py
nillion_movement_poc/agent_modules/agent_modules/exception/: exceptions.py
nillion_movement_poc/agent_modules/agent_modules/factory/: core_factory.py  database_factory.py  embedding_factory.py  llm_factory.py  node_factory.py  service_factory.py
nillion_movement_poc/agent_modules/agent_modules/opensearch/: opensearch_service.py
nillion_movement_poc/agent_modules/agent_modules/websearch/: perser_service.py
nillion_movement_poc/mighty_agent/: .env.example  app.py  pyproject.toml
nillion_movement_poc/mighty_agent/opensearch/: arbitrum_raw_urls.txt  docker-compose.ci.yml  mighty_docs.txt  move_raw_urls.txt  opensearch_insert_docs.ipynb  polygon_raw_urls.txt  zg_raw_urls.txt
nillion_movement_poc/mighty_agent/public/: base.css
nillion_movement_poc/mighty_crypto_sdk/: pyproject.toml
nillion_movement_poc/mighty_crypto_sdk/mighty_crypto_sdk/: aad_meta.py  asymmetric_encryption.py  json_datagram.py  symmetric_encryption.py  tagged_secret_box.py  utils.py
(+44 files in other folders)
