[tool.poetry]
name = "agent-modules"
version = "0.1.0"
description = ""
authors = ["spartan-nguyentruong <nguyen.truong@c0x12c.com>"]

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "2.0.603"
langchain = "0.3.7"
langchain-core = "0.3.21"
langgraph = "0.2.39"
sentence-transformers = "3.3.1"
web3 = "7.4.0"
aptos-sdk = "0.9.2"
evaluate = "0.4.3"
sqlite-vec = "0.1.6"
langchain-huggingface = "0.1.2"
langchain-anthropic = "0.2.3"
langchain-community = "0.3.7"
langchain-groq = "0.2.0"
langchain-ollama = "0.2.0"
langchain-openai = "0.2.4"
langchain-text-splitters = "0.3.2"
opensearch-py = "2.8.0"
nltk = "3.9.1"
mighty-crypto-sdk = "*"
dishka = "^1.4.2"
ipython = "8.30.0"
accelerate = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
mighty-crypto-sdk = { path = "../mighty_crypto_sdk", develop = true }